Remove hat from \overline{U}

--- a/main.tex
+++ b/main.tex
@@ -125,9 +125,9 @@ The goal is to find an $\hat{\alpha}$ which maximises the expected net revenues 
 given time horizon $T$,
 \begin{equation}
   \max_{\hat{\alpha}}\mathbb E_{\hat{W}}\left[ \sum_{t=0}^T\hat{U}_t(\hat{S}_t,\hat{\alpha}_t,\hat{W}_{t+1})
-    - \hat{\overline{U}}(\hat{S}_T)\right],
+    - \overline{U}(\hat{S}_T)\right],
 \end{equation}
-where $\hat{U}_t$ denotes the revenue at time $t$, and $\hat{\overline{U}}$ the
+where $\hat{U}_t$ denotes the revenue at time $t$, and $\overline{U}$ the
 cost of unsold stock.
 We use the subscript on $\mathbb{E}_{\hat{W}}$ to emphasise that the
 expectation is taken with respect to the random variables $\hat{W}_t$.
