--- a/references.bib
+++ b/references.bib
@@ -119,3 +119,17 @@
   year={1998},
   publisher={Cambridge Univ Press}
 }
+
+@article{riseth2017dynamic,
+   author = {Riseth, Asbj{\o}rn Nilsen},
+    title = "{Dynamic pricing in retail with diffusion process demand}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1709.09852},
+ primaryClass = "math.OC",
+ keywords = {Mathematics - Optimization and Control, Mathematics - Dynamical Systems, 49J20, 93E20},
+     year = 2017,
+    month = sep,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170909852N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
