--- a/references.bib
+++ b/references.bib
@@ -133,3 +133,25 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170909852N},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{mogensen2018optim,
+  author  = {Mogensen, Patrick K and Riseth, Asbj{\o}rn N},
+  title   = {Optim: A mathematical optimization package for {Julia}},
+  journal = {Journal of Open Source Software},
+  year    = {2018},
+  volume  = {3},
+  number  = {24},
+  pages   = {615},
+  doi     = {10.21105/joss.00615}
+}
+
+@article{bezanson2017julia,
+  title={Julia: A fresh approach to numerical computing},
+  author={Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
+  journal={SIAM review},
+  volume={59},
+  number={1},
+  pages={65--98},
+  year={2017},
+  publisher={SIAM}
+}
